Fixed explanation page overflow

--- a/source/pages/explanation_page/explanation.css
+++ b/source/pages/explanation_page/explanation.css
@@ -1,13 +1,14 @@
 html {
   background: url("../../assets/PreviewMap.png") no-repeat center fixed;
   background-size: cover;
+  overflow: hidden;
 }
 
 main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
 main > * {
@@ -15,19 +16,21 @@ main > * {
   margin-right: 1em;
 }
 
-.top-container {
+div.top-container {
   display: flex;
   justify-content: space-around;
 }
 
-.bot-container {
-  display: flex;
-  justify-content: center;
+img#myth-image {
+  border-style: solid;
+  border-color: beige;
+  border-radius: 2%;
+  width: 400px;
 }
 
-#explanation {
+div#explanation {
   width: 35%;
-  height: 500px;
+  height: 480px;
   color: beige;
   text-align: left;
   border-style: solid;
@@ -36,7 +39,7 @@ main > * {
   overflow: auto;
 }
 
-.img_container {
+div.img_container {
   background-color: rgba(0, 0, 1, 0.5);
   width: 400px;
   border-style: solid;
@@ -46,23 +49,23 @@ main > * {
   overflow: hidden;
 }
 
-#constellation-image {
+img#constellation-image {
   width: 500px;
   border-radius: 2%;
   padding-top: 30%;
   padding-bottom: 20%;
 }
 
-#myth-image {
-  border-style: solid;
-  border-color: beige;
-  border-radius: 2%;
-  width: 400px;
+div.bot-container {
+  display: flex;
+  justify-content: center;
 }
 
 button.continue {
   margin-top: 5vh;
 }
+
+/* Animation */
 
 @keyframes pulsate {
   0% {
@@ -81,29 +84,26 @@ button.continue {
 
 /* Media Query for Small Screens */
 @media (max-width: 600px) {
-  .top-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+  html {
+    overflow: auto;
   }
-
-  .top-container {
+  div.top-container {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  #myth-image {
-    width: 300px;
+  img#myth-image {
+    width: 333px;
     margin-bottom: 2%;
   }
-  #explanation {
+  div#explanation {
     width: 300px;
     margin-bottom: 2%;
     padding: 0.5em 1em 0.5em 1em;
   }
-
-  .img_container {
-    width: 300px;
+  div.img_container {
+    width: 333px;
   }
 }
 
